cluster/apps/custom-error-pages/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-error-pages
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-error-pages
  template:
    metadata:
      labels:
        app: custom-error-pages
    spec:
      containers:
        - name: custom-error-pages
          image: ghcr.io/tarampampam/error-pages:2.2.0
          ports:
            - containerPort: 8080
              name: http
