cluster/apps/custom-error-pages/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-error-pages
spec:
  selector:
    app: custom-error-pages
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
