cluster/apps/custom-error-pages/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: custom-error-pages
spec:
  rules:
    - host: hef.wtf
      http:
        paths:
          - backend:
              service:
                name: custom-error-pages
                port:
                  name: http
            pathType: Prefix
            path: /
  tls:
    - hosts:
        - hef.wtf
    - secretName: hef.wtf-tls
